private_key_generator/tests/compile_fails/timestamp_bits_too_large.stderr
error[E0080]: evaluation of `<private_key_generator::VersioningConfig<0, 1000000000, 32, 57, 0, 1000000000> as private_key_generator::VersionConfig>::TIMESTAMP_BITS` failed
 --> src/key_generator.rs
  |
  |                     [/* TIMESTAMP_BITS must be less than or equal to 56 */][TIMESTAMP_BITS as usize]
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ index out of bounds: the length is 0 but the index is 57

note: erroneous constant encountered
   --> src/id.rs
    |
    |                 &[V::VERSION_BITS, V::TIMESTAMP_BITS],
    |                                    ^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn <private_key_generator::BinaryId<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UTerm, private_key_generator::prelude::B1>, private_key_generator::prelude::B1>, private_key_generator::prelude::B0>, private_key_generator::prelude::B0>, private_key_generator::prelude::B0>, private_key_generator::prelude::B0>, private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UTerm, private_key_generator::prelude::B1>, private_key_generator::prelude::B0>, private_key_generator::prelude::B1>, 5, private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UInt<private_key_generator::typenum::UTerm, private_key_generator::prelude::B1>, private_key_generator::prelude::B1>, private_key_generator::prelude::B1>, private_key_generator::prelude::B0>, private_key_generator::prelude::B1>, private_key_generator::prelude::B0>> as private_key_generator::EncodedId>::generate::<private_key_generator::VersioningConfig<0, 1000000000, 32, 57, 0, 1000000000>>`
   --> src/key_generator.rs
    |
    |           let (mut id, trimmed_timestamp) = Id::generate::<V>(
    |  ___________________________________________^
    | |             prefix,
    | |             expiration,
    | |             associated_data.is_some(),
    | |             self.current_version_epoch,
    | |             rng,
    | |         )?;
    | |_________^

note: erroneous constant encountered
   --> src/key_generator.rs
    |
    |                 &[V::VERSION_BITS, V::TIMESTAMP_BITS],
    |                                    ^^^^^^^^^^^^^^^^^
